--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@ nav a {
 }
 
 .hero {
+    border: 0.2rem solid #e2c8a3;
     padding: 6rem 2rem;
     text-align: center;
     background-image: url("/images/sierra-bakehouse-hero2.jpg");
@@ -57,9 +58,12 @@ nav a {
 }
 
 .menu-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px,ifr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 25px;
+    padding: 6px 12px;
+    animation: fadeEffect 1s;
+    opacity: 0;
+    display: none;
 }
 
 .menu-item {
@@ -68,4 +72,52 @@ nav a {
     border-radius: 12px;
     text-align: center;
     box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+}
+
+.tab {
+    overflow: hidden;
+    border: 2px solid #5a3e1b;
+    background-color: #e2c8a3;
+    text-align: center;
+    border-radius: 1rem;
+}
+
+.tab button {
+    background-color: inherit;
+    float: center;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+.tab button:hover {
+    background-color: #5a3e1b;
+    color: #e2c8a3;
+}
+
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+.tab button:active {
+    background-color: #fff;
+}
+
+.menu-grid.active {
+    display: block;
+    opacity: 1;
+}
+
+.notice {
+    color: #5a3e1b;
+    text-align: center;
+}
+
+.topright {
+    float: right;
+    cursor: pointer;
+    font-size: 2rem;
 }
