--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
 
 body {
     margin: 0;
-    font-family: "Inter", sans-serif;
+    font-family: "Lexend", sans-serif;
     color: var(--text-color);
     background: var(--site-bg);
     -webkit-font-smoothing: antialiased;
@@ -77,7 +77,7 @@ header {
 nav a {
     margin-right: 20px;
     text-decoration: none;
-    color: var(--primary-brown);
+    color: var(--site-bg);
     font-weight: 600;
     transition: color 0.3s ease;
     font-family: "Cormorant", serif;
@@ -175,6 +175,8 @@ nav a:hover {
     border: 1px solid var(--accent-wheat);
     border-radius: 8px;
     margin: 0 8px;
+    margin-top: 0.3rem;
+    margin-bottom: 0.3rem;
     cursor: pointer;
     padding: 12px 24px;
     transition: all 0.3s ease;
@@ -234,12 +236,11 @@ nav a:hover {
 }
 
 .footer {
-    display: flex;
-    gap: 20px;
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+    max-width: 1200px;
+    padding: 2rem 1rem;
 }
 
 .footer-div {
@@ -252,4 +253,17 @@ nav a:hover {
 
 .lines {
     border-top: 3px solid var(--accent-wheat);
+}
+
+.footer2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+    max-width: 1200px;
+}
+
+.bottom {
+    background-color: var(--accent-wheat);
+    padding: 3rem 2rem;
+    width: 100%;
 }
